Trim Makefile. Add c ext lib to speedcomp testing

--- a/lecture6/speedcomp/cmodule/Makefile
+++ b/lecture6/speedcomp/cmodule/Makefile
@@ -1,6 +1,7 @@
 CC=gcc
-PYCFLAGS=`python3-config --cflags`
+PYCFLAGS=`python3-config --cflags` -fPIC
 # NUMPYCFLAGS=-I/usr/lib/python3/dist-packages/numpy/core/include
+LDFLAGS=-lm
 CFLAGS=-Iinclude
 
 .PHONY: all
@@ -8,13 +9,13 @@ all: bin/bessel.o bin/bessel.py.o lib/besselcc.so
 
 
 bin/bessel.o: src/bessel.c include/bessel.h
-	$(CC) $(CFLAGS) src/bessel.c  -o $@ -O3 -lm -shared -fPIC
+	$(CC) $(CFLAGS) src/bessel.c -c  -o $@ -O3
 
 bin/bessel.py.o: src/bessel.py.c include/bessel.py.h
-	$(CC) $(PYCFLAGS) $(CFLAGS) src/bessel.py.c -c -o $@ -fPIC
+	$(CC) $(PYCFLAGS) $(CFLAGS) src/bessel.py.c -c -o $@
 
 lib/besselcc.so: bin/bessel.py.o
-	$(CC) $(PYCFLAGS) -fPIC -shared bin/bessel.py.o bin/bessel.o  -o $@ $(LDFLAGS) -lm
+	$(CC) $(PYCFLAGS) -shared bin/bessel.py.o bin/bessel.o  -o $@ $(LDFLAGS)
 
 .PHONY: clean
 clean: 
