Make besselc parallel - 5x speed

--- a/lecture6/speedcomp/cmodule/Makefile
+++ b/lecture6/speedcomp/cmodule/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-PYCFLAGS=`python3-config --cflags` -fPIC
+PYCFLAGS=`python3-config --cflags` -fPIC -fopenmp
 # NUMPYCFLAGS=-I/usr/lib/python3/dist-packages/numpy/core/include
 LDFLAGS=-lm
 CFLAGS=-Iinclude
@@ -9,12 +9,12 @@ all: bin/bessel.o bin/bessel.py.o lib/besselcc.so
 
 
 bin/bessel.o: src/bessel.c include/bessel.h
-	$(CC) $(CFLAGS) src/bessel.c -c  -o $@ -O3
+	$(CC) $(CFLAGS) src/bessel.c -c  -o $@ -O3 -fopenmp
 
 bin/bessel.py.o: src/bessel.py.c include/bessel.py.h
 	$(CC) $(PYCFLAGS) $(CFLAGS) src/bessel.py.c -c -o $@
 
-lib/besselcc.so: bin/bessel.py.o
+lib/besselcc.so: bin/bessel.py.o bin/bessel.o
 	$(CC) $(PYCFLAGS) -shared bin/bessel.py.o bin/bessel.o  -o $@ $(LDFLAGS)
 
 .PHONY: clean
